<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="caclculadora_imc">Caclculadora IMC</string>
    <string name="digite_a_sua_altura_ex_1_64">Digite a sua altura (Ex.: 1.64)</string>
    <string name="digite_o_seu_peso_ex_54_0">Digite o seu peso (Ex.: 54.0)</string>
    <string name="calcular">Calcular</string>
    <string name="imc">IMC</string>
    <string name="magreza_grave">Magreza grave</string>
    <string name="abaixo_de_16_0">abaixo de 16.0</string>
    <string name="magreza_moderada">Magreza moderada</string>
    <string name="_16_0_16_9">16.0 - 16.9</string>
    <string name="magreza_leve">Magreza leve</string>
    <string name="_17_18_4">17.0 - 18.4</string>
    <string name="saud_vel">Saudável</string>
    <string name="_18_5_24_9">18.5 - 24.9</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="_25_5_29_9">25.5 - 29.9</string>
    <string name="obesidade_grau_i">Obesidade Grau I</string>
    <string name="_30_0_34_9">30.0 - 34.9</string>
    <string name="obesidade_grau_ii">Obesidade Grau II</string>
    <string name="_35_0_39_9">35.0 - 39.9</string>
    <string name="obesidade_grau_iii">Obesidade Grau III</string>
    <string name="acima_de_40_0">acima de 40.0</string>
    <string name="nova_medi_o">Nova Medição</string>
    <string name="tmb">TMB</string>
    <string name="voltar">Voltar</string>
    <string name="calculadora_tmb">Calculadora TMB</string>
    <string name="idade">Idade</string>
</resources>