<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/imageMedidor"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saudavel" />

    <TextView
        android:id="@+id/textViewIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/imc"
        android:textColor="#49454e"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageMedidor" />

    <TextView
        android:id="@+id/resultadoIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text=""
        android:textColor="#49454e"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIMC" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="8"
        android:useDefaultMargins="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageMedidor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_azul_escuro"
            android:importantForAccessibility="no"/>
        <TextView
            android:id="@+id/magrezaGrave"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/magreza_grave"/>

        <TextView
            android:id="@+id/intervaloMagrezaGrave"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/abaixo_de_16_0"
            android:textColor="#49454e" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_azul"
            android:importantForAccessibility="no"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/magreza_moderada"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/_16_0_16_9"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_azul_claro"
            android:importantForAccessibility="no"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/magreza_leve"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/_17_18_4"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_verde"
            android:importantForAccessibility="no"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/saud_vel"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/_18_5_24_9"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_amarelo"
            android:importantForAccessibility="no"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/sobrepeso"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/_25_5_29_9"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_laranja"
            android:importantForAccessibility="no"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/obesidade_grau_i"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/_30_0_34_9"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_vermelho"
            android:importantForAccessibility="no"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/obesidade_grau_ii"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/_35_0_39_9"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quadrado_vermelho_escuro"
            android:importantForAccessibility="no"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textColor="#49454e"
            android:text="@string/obesidade_grau_iii"/>

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/acima_de_40_0"
            android:textColor="#49454e" />

    </GridLayout>

    <Button
        android:id="@+id/botaoVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nova_medi_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>