<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".TMBActivity">

    <ImageButton
        android:id="@+id/botaoVoltar"
        android:contentDescription="@string/voltar"
        style="@style/botoes_do_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"/>

    <TextView
        android:id="@+id/textView"
        style="@style/titulo_colorido"
        android:text="@string/calculadora_tmb"
        app:layout_constraintBottom_toBottomOf="@+id/botaoVoltar"
        app:layout_constraintEnd_toStartOf="@+id/botao_info"
        app:layout_constraintStart_toEndOf="@+id/botaoVoltar"
        app:layout_constraintTop_toTopOf="@+id/botaoVoltar" />

    <ImageButton
        android:id="@+id/botao_info"
        style="@style/botoes_do_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_info_24"
        android:contentDescription="O que é TMB?"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/texto_colorido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:text="Sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoVoltar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipIcon="@drawable/male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipIcon="@drawable/female" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idade"
        style="@style/texto_colorido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <SeekBar
            android:id="@+id/seekBar_idade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:max="130"/>

        <TextView
            android:id="@+id/textView_idade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        style="@style/texto_colorido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Altura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/Altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <SeekBar
            android:id="@+id/seekBar_altura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:max="280"/>

        <TextView
            android:id="@+id/textView_altura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        style="@style/texto_colorido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Altura" />

    <LinearLayout
        android:id="@+id/Peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <SeekBar
            android:id="@+id/seekBar_peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:max="25000"/>

        <TextView
            android:id="@+id/textView_peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/botao_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Peso" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp
"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/baseline_tmb" />


</androidx.constraintlayout.widget.ConstraintLayout>